Change authen method to Barer

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           username,
           password
         },{
-          withCredentials: true
+          Credentials: true
         })
         console.log(response.data)
       } catch (error) {
@@ -39,7 +39,7 @@
 
     const callUsers = async () => {
       try {
-        const response = await axios.get('http://localhost:8888/api/v1/users', { withCredentials: true })
+        const response = await axios.get('http://localhost:8888/api/v1/users', { Credentials: true })
         console.log(response.data)
       } catch (error) {
         console.log('error', error)
